--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ video {
     color: white;
     font-size: 20px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .header a:hover {
@@ -140,4 +141,43 @@ textarea {
     height: 100vh;
     background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10, 12, 16, 0.7) 50%, rgba(10, 12, 16, 0.99) 85%);
     transition: visibility 1s ease-in-out;
+}
+
+@media (max-width: 1100px) {
+
+    p {
+        display: none;
+    }
+
+    .caixa-mae {
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 10px;
+    }
+
+    .caixa-principal {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .img-mario-luidi {
+        width: 80vw;
+        height: auto;
+    }
+
+    .header {
+        margin: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header a {
+        font-size: 15px;
+    }
+
+    .header img {
+        display: none;
+    }
 }
